Added inference based on generated data

--- a/classifiy.ipynb
+++ b/classifiy.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python38564bitd67224606a3741f1bd67dae374066487",
+   "name": "python38564bit23108f7d598d4482986ed01da9ded644",
    "display_name": "Python 3.8.5 64-bit"
   },
   "metadata": {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 4
     }
    ],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -129,10 +129,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
+   "source": [
+    "# Sample Prediction using  custom user input values\n",
+    "sample_data =np.array([60.0,1,190]) \n",
+    "sample_pred = knn.predict(sample_data.reshape(1,-1))\n",
+    "sample_pred[0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['final_model.sav']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 15
+    }
+   ],
+   "source": [
+    "# Saving the model\n",
+    "import joblib\n",
+    "file_name = \"final_model.sav\"\n",
+    "joblib.dump(knn,file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
+   "source": [
+    "# Loading the model \n",
+    "loaded_model = joblib.load('final_model.sav')\n",
+    "eval = loaded_model.score(X_test,y_test)\n",
+    "eval"
+   ]
   }
  ]
 }
