--- a/model/classifiy.ipynb
+++ b/model/classifiy.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_data = np.loadtxt('data/elevator_data.txt')\n",
+    "file_data = np.loadtxt('../data/elevator_data.txt')\n",
     "data = file_data[:,:-1]\n",
     "labels = file_data[:,3:]\n"
    ]
@@ -169,7 +169,7 @@
    "source": [
     "# Saving the model\n",
     "import joblib\n",
-    "file_name = \"final_model.sav\"\n",
+    "file_name = \"../final_model.sav\"\n",
     "joblib.dump(knn,file_name)"
    ]
   },
@@ -191,7 +191,7 @@
    ],
    "source": [
     "# Loading the model \n",
-    "loaded_model = joblib.load('final_model.sav')\n",
+    "loaded_model = joblib.load('../final_model.sav')\n",
     "eval = loaded_model.score(X_test,y_test)\n",
     "eval"
    ]
