--- a/model/data_exploration.ipynb
+++ b/model/data_exploration.ipynb
@@ -92,7 +92,7 @@
     "    target[beg:beg+num] += i\n",
     "    previous_end = beg+num\n",
     "conc_data = np.concatenate((data, target.reshape(target.shape[0], 1)), axis=1)\n",
-    "np.savetxt(\"data/elevator_data.txt\", conc_data, fmt=\"%2.2f\")\n"
+    "np.savetxt(\"../data/elevator_data.txt\", conc_data, fmt=\"%2.2f\")\n"
    ]
   },
   {
