--- a/model/classifiy.ipynb
+++ b/model/classifiy.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 6
     }
    ],
    "source": [
@@ -152,18 +152,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "['final_model.sav']"
+       "['../final_model.sav']"
       ]
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 7
     }
    ],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 8
     }
    ],
    "source": [
