--- a/model/classifiy.ipynb
+++ b/model/classifiy.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scaling the data to normalize\n",
+    "# from sklearn.preprocessing import StandardScaler\n",
+    "# sc_X = StandardScaler()\n",
+    "# X_train=sc_X.fit_transform(X_train)\n",
+    "# X_test = sc_X.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +104,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 17
     }
    ],
    "source": [
@@ -108,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +153,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 19
     }
    ],
    "source": [
@@ -152,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +176,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 20
     }
    ],
    "source": [
@@ -175,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +199,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 21
     }
    ],
    "source": [
@@ -195,6 +208,13 @@
     "eval = loaded_model.score(X_test,y_test)\n",
     "eval"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
